--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   ],
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.2",
+    "@sonata-api/common": "*",
     "eslint-config-aeria": "*",
     "eslint-plugin-vue": "^9.22.0"
   },
   "peerDependencies": {
     "@eslint/eslintrc": "^3.0.2",
+    "@sonata-api/common": "*",
     "eslint-config-aeria": "*",
     "eslint-plugin-vue": "^9.22.0"
   }
